--- a/.gitignore
+++ b/.gitignore
@@ -2,30 +2,7 @@
 # Created by https://www.gitignore.io/api/jetbrains,node,bower,code,sublimetext,visualstudiocode,vagrant,vim,windows
 
 ### JetBrains ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
+.idea/
 
 ## File-based project format:
 *.iws
@@ -53,32 +30,32 @@ fabric.properties
 # *.iml
 # modules.xml
 
- -### OSX template
--*.DS_Store
--.AppleDouble
--.LSOverride
--
--# Icon must end with two \r
--Icon
--
--# Thumbnails
--._*
--
--# Files that might appear in the root of a volume
--.DocumentRevisions-V100
--.fseventsd
--.Spotlight-V100
--.TemporaryItems
--.Trashes
--.VolumeIcon.icns
--.com.apple.timemachine.donotpresent
--
--# Directories potentially created on remote AFP share
--.AppleDB
--.AppleDesktop
--Network Trash Folder
--Temporary Items
--.apdisk
+### OSX template
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 ### Node ###
 # Logs
